manifests/echo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-app
  namespace: simple
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: echo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: simple
  name: echo-app
spec:
  selector:
    matchLabels:
      app: echo-app
  replicas: 2
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
        - name: echo-app
          image: image_name_replace
          ports:
            - containerPort: 3000
