manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: simple
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - echo.k8s.util.xyz
      secretName: echo-app-tls
  rules:
    - host: echo.k8s.util.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: echo-app
                port:
                  number: 80
